--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ org.gradle.jvmargs=-Xmx8192m -XX:MaxMetaspaceSize=1024m
 
 # Stop warning about higher than tested XCode version
 kotlin.apple.xcodeCompatibility.nowarn=true
+
+com.ingonoka.pomName=UTILS Library
+com.ingonoka.pomDescription=A library with misc helper functions.
