--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,29 @@
 [versions]
 agp = "8.5.2"
 kotlin = "2.0.20"
-nexus-publish = "2.0.0"
-junitJupiter = "5.8.1"
+kotlinCoroutines = "1.9.0"
 asciiDocGradlePlugin = "4.0.2"
+
+kotlinxDateTime = "0.6.1"
+
 dokka = "1.9.20"
-android-minSdk = "22"
+android-minSdk = "26"
 android-compileSdk = "34"
+android-target-compatibility = "VERSION_21"
+android-source-compatibility = "VERSION_21"
+jvm-target = "JVM_21"
+hexutils="v1.0-6-g6748a94"
+logbackClassic = "1.5.8"
+androidLogback = "3.0.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-nexus-publish = { module = "io.github.gradle-nexus.publish-plugin:io.github.gradle-nexus.publish-plugin.gradle.plugin", version.ref = "nexus-publish" }
-junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junitJupiter" }
+ingonoka-hexutils = { group = "com.ingonoka", name = "hexutils-lib", version.ref = "hexutils"}
+kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinCoroutines" }
+jvm-logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logbackClassic" }
+android-logback = { group = "com.github.tony19", name = "logback-android", version.ref = "androidLogback" }
+kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDateTime" }
+kotlin-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinCoroutines" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
